# deheif

./: .pre-commit-config.yaml  README.md  pyproject.toml
deheif/: __main__.py
tools/: setup.sh
