[tool.poetry]
name = "deheif"
version = "0.1.0"
description = ""
authors = ["Stefan Götz <github.nooneelse@spamourmet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
mypy = "^1.0.1"
pylint = "^2.16.2"
pycodestyle = "^2.10.0"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
